--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -2,10 +2,23 @@
 
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
-  <%= f.text_field :title %>
+  <%= f.text_field :title, :id => 'song_title' %>
+  <br />
+
+  <%= f.label :song_artist_name %>
+  <%= f.text_field :song_artist_name, :id => 'song_artist_name' %>
+  <br />
+
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+  <br />
+
+  <%= f.label :song_notes_1 %>
+  <%= f.text_field :song_notes_1, :id => 'song_notes_1' %>
+  <br />
+
+  <%= f.label :song_notes_2 %>
+  <%= f.text_field :song_notes_2, :id => 'song_notes_2' %>
   <br />
 
   <%= f.submit %>
 <% end %>
-
-
