--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,3 +1,8 @@
-<h1>Songs#show</h1>
+<h1>Song</h1>
 
-Title: <%= @song.title %>
+Title: <%= @song.title %><br>
+Genre: <%= @song.genre.name %><br>
+Notes: <br><% @song.notes.each do |note| %>
+  <%= note.content %>
+  <br>
+<% end %>
