--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -4,8 +4,12 @@
   <%= f.label :title %>
   <%= f.text_field :title %>
   <br />
-
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
+  <br />
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+  <input name='song[note_contents][]' id='song_notes_1'>
+  <input name='song[note_contents][]' id='song_notes_2'>
+  <input name='song[note_contents][]' id='song_notes_3'>
   <%= f.submit %>
 <% end %>
-
-
