--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -3,8 +3,13 @@
 <%= form_for @song  do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
+  <%# key, collection, value, view %>
+  <%= f.collection_select :genre_id, @genres, :id, :name  %>
   <br />
-
+  <input type="text" name="song[note_contents][]" id="song_notes_1">
+  <input type="text" name="song[note_contents][]" id="song_notes_2">
   <%= f.submit %>
 <% end %>
 
